  * Added random access support to GMSReader and TRJReader (#1081)
  * Added atomgroup.center(weights, pbc) method to calculate the center
    of a group given weights
  * Universe anchors (for unpickling) now use a uuid (rather than filename)
    to distinguish themselves by default. Can still use anchor_name kwarg to
    control the anchor name manually. (PR #1125)

Fixes
  * Improvement of analysis/waterdynamics module (Issue #935)
  * Removed MDAnalysis.analysis.PDBToBinaryTraj (Issue #1035)
  * MDAnalysis.analysis.distances.between() is no longer broken
  * GROWriter resids now truncated properly (Issue #886)
  * reading/writing lambda value in trr files (Issue #859)
  * fix __iter__/next redundancy (Issue #869)
  * SingleFrameReader now raises StopIteration instead of IOError on calling
    next (Issue #869)
  * Display of Deprecation warnings doesn't affect other modules anymore (Issue #754)
  * Changed nframes to n_frames in analysis modules for consistency (Issue #890)
  * fixed incompatibility with newer matplotlib in analysis.hole
  * Fixed modules that improperly documented and/or used frame slicing
    defaults (#914)
  * Fixed same interRDF can be run twice (Issue #924)
  * Support for TPR files produced by Gromacs-2016 (Issue #932)
  * Fixed parsing PDB files with CONECT records to TER entries (Issue #936)
  * Fixed parsing PDB files with single entry in CONECT record (Issue #937)
  * Progress meters are now displayed as expected on jupyter notebooks
    (Issue #927)
  * Reset trajectory to 0 after sliced iteration (Issue #1031)
  * Fixed rotaxis returning NaN if a=b (Issue #1045)
  * Fixed align_principal_axis onto a principal axes (Issue #1045)
  * Fixed NCDFWriter wrote velocities instead of forces if
    convert_units=False was set: now correctly writes forces (PR #1113)
  * Fixed warn about missing cython package in dev builds
  * Fix align.rotation_matrix checks array shape equality (Issue #1152)