@@ -58,6 +58,7 @@ Enhancements
   * Universe anchors (for unpickling) now use a uuid (rather than filename)
     to distinguish themselves by default. Can still use anchor_name kwarg to
     control the anchor name manually. (PR #1125)
+  * Added groupby method to Group objects. (PR #1112)
 
 Fixes
   * Improvement of analysis/waterdynamics module (Issue #935)
